# mypackage_python_tutorial

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
mypackage/: __init__.py
mypackage/tests/: test_divide.py
