[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = "My first package"
license = "MIT"
authors = ["EMPA Python tutorial"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
httpx = "^0.24.0"
gidgethub = "^4.0.0"
pytest = "^7.4.3"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
bumpver = { version = "2023.1129", optional = true }
pre-commit = { version = "^3.6.0", optional = true }
pytest = { version = "7.4.3", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }

[tool.poetry.group.doc.dependencies]
sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
