[tool.poetry]
name = "mypackage"
version = "0.2.0"
description = "My first package"
license = "MIT"
authors = ["EMPA Python tutorial"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
httpx = "^0.24.0"
gidgethub = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.dev.dependencies]
bumpver = "^2023.1129"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "v0.2.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"mypackage/__init__.py" = ['__version__ = "{pep440_version}"']
"pyproject.toml" = ['version = "{pep440_version}"']
